--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="salad.html">Togolese Spaghetti Salad</a>
+        <a href="chicken.html">Easy Thai basil chicken</a>
     </body>
 </html>
