--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
         <h1>Odin Recipes</h1>
         <a href="salad.html">Togolese Spaghetti Salad</a>
         <a href="chicken.html">Easy Thai basil chicken</a>
+        <a href="cake.html">Kyrgyzstan Apple Cake</a>
     </body>
 </html>
