Polish index.html

--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        <a href="salad.html">Togolese Spaghetti Salad</a>
-        <a href="chicken.html">Easy Thai basil chicken</a>
-        <a href="cake.html">Kyrgyzstan Apple Cake</a>
+        <h1>International cuisine recipes!</h1>
+        <img src="https://mospolytech.ru/upload/iblock/163/international%20cuisine.jpg" alt="world map made of different foods" width="750">
+        <h2>A couple of recipes from all over the world</h2>
+        <ul>
+            <li><a href="salad.html">Togolese Spaghetti Salad</a></li>
+            <li><a href="chicken.html">Easy Thai basil chicken</a></li>
+            <li><a href="cake.html">Kyrgyzstan Apple Cake</a></li>
+        </ul>
     </body>
 </html>
