--- a/index.html
+++ b/index.html
@@ -3,16 +3,20 @@
     <head>
         <meta charset="utf-8">
         <title>Recipes</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
         <h1>International cuisine recipes!</h1>
-        <img src="https://mospolytech.ru/upload/iblock/163/international%20cuisine.jpg" alt="world map made of different foods" width="750">
+        <img src="https://mospolytech.ru/upload/iblock/163/international%20cuisine.jpg" alt="world map made of different foods" width="750" id="homepageimg">
         <h2>A couple of recipes from all over the world</h2>
-        <ul>
-            <li><a href="salad.html">Togolese Spaghetti Salad</a></li>
-            <li><a href="chicken.html">Easy Thai basil chicken</a></li>
-            <li><a href="cake.html">Kyrgyzstan Apple Cake</a></li>
-        </ul>
+        <div class="container">
+            <ul class="myUL">
+                <li><a href="salad.html">Togolese Spaghetti Salad</a></li>
+                <li><a href="chicken.html">Easy Thai basil chicken</a></li>
+                <li><a href="cake.html">Kyrgyzstan Apple Cake</a></li>
+            </ul>
+        </div>
+        
     </body>
 </html>
